# zksh

./: .gitignore  .travis.yml  Dockerfile  LICENSE.txt  Makefile.am  README.md  configure.ac  docker-compose.yml
debian/: changelog  control  copyright
man/: Makefile.am  zkcat.1  zkcat.ronn  zkgetacl.1  zkgetacl.ronn  zklock.1  zklock.ronn  zkls.1  zkls.ronn  zkrm.1  zkrm.ronn  zktee.1  zktee.ronn  zktouch.1  zktouch.ronn  zkwait.1  zkwait.ronn
src/: Makefile.am  zkcat.c  zkeproxy.c  zkeproxy.h  zkgetacl.c  zklock.c  zkls.c  zkrm.c  zksh.c  zksh.h  zktee.c  zktouch.c  zkwait.c
tests/: Makefile.am  check_zksh_check_nodepath.c  check_zksh_join_path.c
tests/bats/: zkwait.bats
